--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
+        android:name = ".TanninApp"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -30,7 +31,7 @@
         <activity
             android:name=".ViewDataActivity"
             android:screenOrientation="portrait"
-            android:label="Tannin">
+            android:label="Cloud Life">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
